- Imported more Angular Material modules to HomeModule. + Added dark grey color to sidenav tab text and icons. - Fixed index out of bounds for GenericTableComponent's data property for dispalyedColumns assignment.

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -28,6 +28,7 @@
 .mat-nav-list .mat-list-item {
   text-transform: capitalize;
   transition: color .2s ease;
+  color: #444;
   .mat-icon {
     margin-right: 12px;
   }
